--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@prismicio/react": "^2.7.4",
     "@react-three/drei": "^9.105.1",
     "@react-three/fiber": "^8.16.1",
+    "@tailwindcss/typography": "^0.5.12",
     "@types/three": "^0.163.0",
     "clsx": "^2.1.0",
     "gsap": "^3.12.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "three": "^0.163.0"
   },
   "devDependencies": {
